--- a/07-realtime-apps/01-socketio/crude-items-app/public/index.html
+++ b/07-realtime-apps/01-socketio/crude-items-app/public/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/client.js"></script>
+    <script src="js/client.js"></script>
 </body>
 
 </html>
